--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.07MB/s(Youtube:不良林), server: 134.195.196.231, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-733.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 6ba87c27-a1f0-4702-9c4e-3cba6fbd7e93, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-804.0KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇳🇱 荷兰-169.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 🇺🇸 美国-8.56MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-3.30MB/s(Youtube:不良林), server: 213.183.59.206, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.20MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-733.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-733.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-733.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-733.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-733.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-733.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活2天)中国-13.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-733.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-285.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
